--- a/templates/app/form.html.twig
+++ b/templates/app/form.html.twig
@@ -19,6 +19,7 @@
 })}}
 
 {{form_row(formArticle.title)}}
+{{ form_row(formArticle.category)}}
 {{form_row(formArticle.content, {
     label: "Contenu",
     attr: {
