--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,19 +1,30 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Register{% endblock %}
+{% block title %}S'inscrire
+{% endblock %}
 
 {% block body %}
-    <h1>Register</h1>
+	<div class="container">
+		<h1 class="text-center">S'inscrire</h1>
 
-    {{ form_errors(registrationForm) }}
+		{{ form_errors(registrationForm) }}
 
-    {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.email) }}
-        {{ form_row(registrationForm.plainPassword, {
-            label: 'Password'
+		{{ form_start(registrationForm) }}
+		{{ form_row(registrationForm.firstName, {
+            label: 'Prénom'
         }) }}
-        {{ form_row(registrationForm.agreeTerms) }}
+		{{ form_row(registrationForm.lastName, {
+            label: 'Nom'
+        }) }}
+		{{ form_row(registrationForm.userName, {
+            label: 'Pseudo'
+        }) }}
 
-        <button type="submit" class="btn">Register</button>
-    {{ form_end(registrationForm) }}
+		{{ form_row(registrationForm.email) }}
+		{{ form_row(registrationForm.plainPassword) }}
+
+		<button type="submit" class="btn btn-secondary">S'inscrire</button>
+		{{ form_end(registrationForm) }}
+	</div>
+
 {% endblock %}
