--- a/templates/admin/gestionArticle.html.twig
+++ b/templates/admin/gestionArticle.html.twig
@@ -4,6 +4,9 @@
 {% endblock %}
 
 {% block body %}
+{% for message in app.flashes('success') %}
+    <div class="alert alert-success text-center w-50 mx-auto my-2">{{ message }}</div>
+{% endfor %}
 
 	<div class="container">
 		<h1 class="text-center my-4">Gestion des articles</h1>
