--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <div class="container">
 
-        <a href="" class="btn btn-info col-12 my-4
+        <a href="{{ path('admin_article') }}" class="btn btn-info col-12 my-4
         ">Gestion des articles</a>
 
         <a href="" class="btn btn-info col-12 my-4
