--- a/templates/admin/formArticle.html.twig
+++ b/templates/admin/formArticle.html.twig
@@ -7,7 +7,13 @@
 {% block body %}
 	<div class="container">
 
-		<h1 class="text-center my-4">Ajouter un article</h1>
+<h1 class="text-center my-3">
+{% if editMode %}
+    Modifier l'article
+{% else %}
+    Ajouter un article
+{% endif %}
+</h1>
 		{{ form_start(form, {
         attr: {
             novalidate: 'novalidate'
