--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -34,8 +34,8 @@
           <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">BackOffice</a>
           <div class="dropdown-menu">
             <a class="dropdown-item" href="{{ path('app_admin') }}">Accueil</a>
-            <a class="dropdown-item" href="{{ path('new_article') }}">Ajouter un article</a>
-            <a class="dropdown-item" href="{{ path('admin_article') }}">Ajouter un article</a>
+            <a class="dropdown-item" href="{{ path('admin_article_new') }}">Ajouter un article</a>
+            <a class="dropdown-item" href="{{ path('admin_article') }}">Gestion des articles</a>
           </div>
         </li>
         {% endif %}
